create: hero block+media queries

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -1,5 +1,7 @@
 *
     box-sizing: border-box
+body
+    background-color: #E5E5E5
 @font-face
     font-family: 'Lato-Cyrillic'
     src: url('../fonts/Lato/Lato-Black.ttf')
