--- a/sass/_blocks/_hero.sass
+++ b/sass/_blocks/_hero.sass
@@ -52,6 +52,7 @@
             font-size: 12px
             line-height: 15px
             text-transform: uppercase
+            letter-spacing: 0.5px
         &-descr
             display: block
             margin-top: 8px
@@ -65,12 +66,13 @@
         min-height: 100px
         border-bottom: 1px solid #D9DADB
         &-wrapper
-            padding-top: 17px
+            padding-top: 15px
             padding-left: 25px
             padding-right: 25px
-            padding-bottom: 19px
+            padding-bottom: 18px
         &:last-child
             border: none
+            margin-top: 2px
         &:hover
             background-color: #F5F5F5
 .text-block
@@ -82,9 +84,10 @@
         line-height: 15px
         text-transform: uppercase
         color: #4592FF
+        letter-spacing: 0.5px
     &__second
         display: block
-        margin-top: 20px
+        margin-top: 21px
         font-family: Roboto Slab, serif
         font-weight: 700
         font-size: 40px
@@ -121,7 +124,7 @@
         font-size: 14px
         line-height: 20px
         color: #FFFFFF
-        margin-top: -41px
+        margin-top: -45px
         opacity: 0.85
     &__text-two
         font-family: Lato-Cyrillic, sans-serif
