create: others block with articles

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,4 +1,6 @@
 @import "_settings.sass"
 @import "_blocks/_header.sass"
 @import "_blocks/_hero.sass"
+@import "_blocks/_themes.sass"
+@import "_blocks/_others.sass"
 @import "_media.sass"
