--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -4,6 +4,11 @@
         border: 1px solid yellow
     .avatar-block
         top: 40px
+    .themes
+        &__post
+            width: 220px
+        &__text
+            width: 140px
 @media (max-width: 1200px)
     .container
         width: 1030px
@@ -23,6 +28,11 @@
         &__second
             font-size: 35px
             max-width: 400px
+    .themes
+        &__post
+            width: 210px
+        &__text
+            width: 140px
 @media (max-width: 1130px)
     .container
         width: 960px
@@ -36,6 +46,12 @@
                 margin-right: 25px
     .hero
         margin-top: 90px
+    .themes
+        &__post
+            width: 180px
+        &__text
+            width: 100px
+            font-size: 13.5px
 @media (max-width: 1060px)
     .container
         width: 890px
@@ -71,6 +87,12 @@
             width: 120px
     .avatar-block
         left: 35px
+    .themes
+        &__post
+            width: 160px
+        &__text
+            width: 100px
+            font-size: 13.5px
 @media (max-width: 890px)
     .container
         width: 93%
@@ -82,6 +104,20 @@
             width: 150px
         &__mobile-menu-hidden
             display: block
+    .themes
+        &__container
+            flex-wrap: wrap
+            justify-content: space-between
+            padding-left: 20px
+            padding-right: 20px
+        &__post
+            flex-basis: 48%
+            justify-content: space-evenly
+        &__text
+            width: 200px
+        &__line
+            &:nth-last-child(4n)
+                display: none
 @media (max-width: 740px)
     .hero
         &__container
@@ -111,6 +147,9 @@
             border-radius: 0 0 10px 0
         &__text-descr
             max-width: 100%
+    .themes
+        &__text
+            width: 150px
 @media (max-width: 690px)
     .container
         width: 87.5%
@@ -123,6 +162,16 @@
         &__third
             margin-top: 15px
             margin-left: 0
+@media (max-width: 650px)
+    .themes
+        &__post
+            flex-basis: 100%
+            justify-content: space-evenly
+            margin-top: 15px
+        &__line
+            display: none
+        &__text
+            width: 60%
 @media (max-width: 600px)
     .text-block
         &__second
