--- a/sass/_blocks/_themes.sass
+++ b/sass/_blocks/_themes.sass
@@ -7,6 +7,7 @@
         padding-bottom: 30px
         display: flex
         justify-content: space-evenly
+        align-items: center
     &__img
         width: 65px
         height: 65px
@@ -19,6 +20,11 @@
         font-size: 14px
         line-height: 20px
         color: #FFFFFF
+        overflow: hidden
+        text-overflow: ellipsis
+        display: -webkit-box
+        -webkit-line-clamp: 2
+        -webkit-box-orient: vertical
     &__post
         display: flex
         align-items: center
