create: money block

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -81,6 +81,10 @@
             width: 5px
             background-color: grey
             border-radius: 0 10px 10px 0
+    .money
+        &__text
+            font-size: 35px
+            width: 746px
 @media (max-width: 1130px)
     .container
         width: 960px
@@ -133,6 +137,13 @@
         margin-top: 80px
     .media-one, .grid-four
         margin-left: 17px
+    .money
+        &__text
+            font-size: 30px
+            width: 706px
+            margin-top: 40px
+        &__button
+            margin-bottom: 45px
 @media (max-width: 930px)
     .container
         width: 840px
@@ -224,6 +235,11 @@
         margin-left: 0
     .six
         width: 100%
+    .money
+        margin-top: -40px
+        &__text
+            font-size: 25px
+            width: 530px
 @media (max-width: 740px)
     .hero
         &__container
@@ -304,6 +320,11 @@
         &__list
             height: 45px
             width: 35px
+    .money
+        margin-top: 0px
+        &__text
+            font-size: 20px
+            width: 430px
 @media (max-width: 600px)
     .text-block
         &__second
@@ -316,6 +337,9 @@
                 padding-right: 30px
             &-img
                 display: none
+    .money
+        &__text
+            width: 271px
 @media (max-width: 400px)
     .text-block
         &__second
@@ -341,6 +365,9 @@
         &__icon
             width: 35px
             height: 35px
+    .money
+        &__text
+            width: 90%
 @media (max-width: 393px)
     .hero
         &__left-block-text
