--- a/sass/style.sass
+++ b/sass/style.sass
@@ -3,4 +3,5 @@
 @import "_blocks/_hero.sass"
 @import "_blocks/_themes.sass"
 @import "_blocks/_others.sass"
+@import "_blocks/_money.sass"
 @import "_media.sass"
