create: news block added + styles

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -85,6 +85,9 @@
         &__text
             font-size: 35px
             width: 746px
+    .news
+        &__first
+            width: 72%
 @media (max-width: 1130px)
     .container
         width: 960px
@@ -109,6 +112,9 @@
             height: 50px
     .others__first
         width: 97%
+    .news
+        &__first
+            width: 70%
 @media (max-width: 1060px)
     .container
         width: 890px
@@ -122,6 +128,9 @@
         &__navbar
             &-link
                 margin-right: 20px
+    .news
+        &__first
+            width: 68%
 @media (max-width: 950px)
     .container
         width: 880px
@@ -144,6 +153,9 @@
             margin-top: 40px
         &__button
             margin-bottom: 45px
+    .news
+        &__post-img
+            width: 180px
 @media (max-width: 930px)
     .container
         width: 840px
@@ -162,6 +174,9 @@
         &__container
             padding-top: 15px
             padding-bottom: 20px
+    .news
+        &__first
+            width: 66%
 @media (max-width: 890px)
     .container
         width: 93%
@@ -240,6 +255,29 @@
         &__text
             font-size: 25px
             width: 530px
+    .news
+        &__first
+            width: 64%
+        &__post-img
+            width: 140px
+@media (max-width: 850px)
+    .news
+        &__first
+            width: 62%
+        &__post-img
+            width: 140px
+@media (max-width: 815px)
+    .news
+        &__first
+            width: 60%
+        &__post-img
+            width: 140px
+@media (max-width: 770px)
+    .news
+        &__first
+            width: 58.5%
+        &__post-img
+            width: 140px
 @media (max-width: 740px)
     .hero
         &__container
@@ -272,6 +310,13 @@
     .themes
         &__text
             width: 150px
+    .news
+        &__second
+            display: none
+        &__first
+            width: 100%
+        &__post-img
+            width: 200px
 @media (max-width: 690px)
     .container
         width: 87.5%
@@ -340,6 +385,11 @@
     .money
         &__text
             width: 271px
+    .news
+        &__post-img
+            display: none
+        &__post-descr
+            margin-left: 0
 @media (max-width: 400px)
     .text-block
         &__second
