--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,4 +4,5 @@
 @import "_blocks/_themes.sass"
 @import "_blocks/_others.sass"
 @import "_blocks/_money.sass"
+@import "_blocks/_news.sass"
 @import "_media.sass"
