create: newsletter and slider

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -5,4 +5,6 @@
 @import "_blocks/_others.sass"
 @import "_blocks/_money.sass"
 @import "_blocks/_news.sass"
+@import "_blocks/_another.sass"
+@import "_blocks/_newsletter.sass"
 @import "_media.sass"
