--- a/sass/_blocks/_news.sass
+++ b/sass/_blocks/_news.sass
@@ -21,7 +21,7 @@
         align-items: center
         justify-content: space-between
         &-img
-            width: 336px
+            min-width: 336px
             height: 195px
             object-fit: cover
         &-descr
