--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -15,6 +15,10 @@
             &-img
                 height: 299px
                 width: 270px
+    .another
+        &__container
+            display: grid
+            grid-template-columns: 555px 253px 253px
 @media (max-width: 1200px)
     .container
         width: 1030px
@@ -88,6 +92,26 @@
     .news
         &__first
             width: 72%
+    .another
+        &__container
+            grid-template-columns: 1fr 1fr
+            column-gap: 30px
+            row-gap: 30px
+            grid-template-rows: 555px 370px 170px
+        &__first
+            grid-column: 1 / 3
+            grid-row: 1 / 2
+        &__second
+            grid-column: 1 / 3
+            grid-row: 2 / 3
+        &__third
+            grid-column: 1 / 2
+            grid-row: 3 / 4
+            text-decoration: none
+        &__forth
+            grid-column: 2 / 3
+            grid-row: 3 / 4
+            text-decoration: none
 @media (max-width: 1130px)
     .container
         width: 960px
@@ -131,6 +155,8 @@
     .news
         &__first
             width: 68%
+        &__post-img
+            min-width: 260px
 @media (max-width: 950px)
     .container
         width: 880px
@@ -155,7 +181,7 @@
             margin-bottom: 45px
     .news
         &__post-img
-            width: 180px
+            min-width: 180px
 @media (max-width: 930px)
     .container
         width: 840px
@@ -259,25 +285,33 @@
         &__first
             width: 64%
         &__post-img
-            width: 140px
+            min-width: 140px
+    .another
+        &__container
+            column-gap: 20px
+    .newsletter
+        &__title
+            font-size: 30px
+        &__form
+            width: 400px
 @media (max-width: 850px)
     .news
         &__first
             width: 62%
         &__post-img
-            width: 140px
+            min-width: 140px
 @media (max-width: 815px)
     .news
         &__first
             width: 60%
         &__post-img
-            width: 140px
+            min-width: 140px
 @media (max-width: 770px)
     .news
         &__first
             width: 58.5%
         &__post-img
-            width: 140px
+            min-width: 140px
 @media (max-width: 740px)
     .hero
         &__container
@@ -316,7 +350,7 @@
         &__first
             width: 100%
         &__post-img
-            width: 200px
+            min-width: 200px
 @media (max-width: 690px)
     .container
         width: 87.5%
@@ -345,6 +379,17 @@
             margin-bottom: 15px
             &:nth-last-child(4n)
                 display: block
+    .another
+        &__container
+            grid-template-rows: 555px 370px 170px 170px
+        &__third, &__forth
+            grid-column: 1 / 3
+        &__forth
+            grid-row: 4 / 5
+    .slide__title
+        font-size: 30px
+    .swiper-container
+        height: 550px
 @media (max-width: 650px)
     .others
         &__first
@@ -370,6 +415,18 @@
         &__text
             font-size: 20px
             width: 430px
+    .sec
+        background-image: url('')
+        height: 330px
+        &__title
+            width: 80%
+        &__descr
+            width: 80%
+    .another
+        &__container
+            row-gap: 10px
+        &__third
+            margin-top: -20px
 @media (max-width: 600px)
     .text-block
         &__second
@@ -389,6 +446,22 @@
         &__post-img
             display: none
         &__post-descr
+            margin-left: 0
+@media (max-width: 520px)
+    .another
+        &__second
+            height: 350px
+        &__third
+            margin-top: -10px
+    .newsletter
+        &__title
+            font-size: 20px
+        &__form
+            display: flex
+            flex-direction: column
+            width: 100%
+        &__button
+            margin-top: 10px
             margin-left: 0
 @media (max-width: 400px)
     .text-block
@@ -418,6 +491,8 @@
     .money
         &__text
             width: 90%
+    .swiper-pagination-bullets
+        bottom: 10px !important
 @media (max-width: 393px)
     .hero
         &__left-block-text
@@ -425,6 +500,19 @@
     .text-block
         &__second
             line-height: 40px
+@media (max-width: 387px)
+    .sec
+        &__button
+            margin-top: 20px
+        &__title
+            width: 100%
+            overflow: hidden
+            text-overflow: ellipsis
+            display: -webkit-box
+            -webkit-line-clamp: 4
+            -webkit-box-orient: vertical
+        &__descr
+            width: 100%
 @media (max-width: 363px)
     .hero
         &__left-block-text
@@ -447,5 +535,9 @@
         &__search
             &-form
                 display: none
+@media (max-width: 268px)
+    .sec
+        &__button
+            display: none
 .container
     border: none
