create: footer hover effect END OF FOOTER ARBEIT

--- a/sass/_blocks/_another.sass
+++ b/sass/_blocks/_another.sass
@@ -148,6 +148,7 @@
         opacity: 0.4
         display: block
         text-align: center
+        margin-top: 2px
     &__cat
         background: #3DC47E
         border-radius: 3px
@@ -200,6 +201,7 @@
         display: flex
         align-items: center
         margin-bottom: 50px
+        margin-left: 2.5px
     &__img
         margin-left: 8px
         margin-right: 2px
