--- a/sass/_blocks/_news.sass
+++ b/sass/_blocks/_news.sass
@@ -17,6 +17,7 @@
     &__post
         position: relative
         padding: 25px
+        padding-bottom: 24px
         display: flex
         align-items: center
         justify-content: space-between
@@ -26,6 +27,7 @@
             object-fit: cover
         &-descr
             margin-left: 25px
+            margin-top: -3px
     &__devide
         margin-left: 25px
         margin-right: 25px
@@ -83,13 +85,13 @@
     &__meta
         margin-top: 20px
         display: flex
-        justify-content: space-between
         &-date
             font-family: Lato-Cyrillic, sans-serif
             font-weight: 400
             font-size: 12px
             line-height: 15px
             color: #939699
+            margin-right: 10px
         &-comments
             font-family: Lato-Cyrillic, sans-serif
             font-weight: 400
@@ -100,6 +102,7 @@
             align-items: center
             width: 41px
             justify-content: space-between
+            margin-right: 10px
             &-a
                 width: 34px
             &-b
