--- a/sass/_blocks/_newsletter.sass
+++ b/sass/_blocks/_newsletter.sass
@@ -13,8 +13,9 @@
         margin: auto
         text-align: center
         margin-bottom: 25px
+        margin-top: 2px
     &__form
-        width: 500px
+        width: 459px
         margin: auto
         display: flex
         justify-content: space-between
@@ -37,7 +38,7 @@
         border: 1px solid #D9DADB
         border-radius: 5px
         padding: 10px 15px
-        &:placeholder
+        &::placeholder
             font-family: Lato, sans-serif
             font-weight: 400
             font-size: 14px
