--- a/sass/style.sass
+++ b/sass/style.sass
@@ -7,4 +7,5 @@
 @import "_blocks/_news.sass"
 @import "_blocks/_another.sass"
 @import "_blocks/_newsletter.sass"
+@import "_blocks/_footer.sass"
 @import "_media.sass"
