create: adaptive footer

--- a/sass/_blocks/_newsletter.sass
+++ b/sass/_blocks/_newsletter.sass
@@ -20,6 +20,7 @@
         display: flex
         justify-content: space-between
         align-items: center
+        position: relative
     &__button
         width: 136px
         margin-left: 10px
@@ -38,6 +39,8 @@
         border: 1px solid #D9DADB
         border-radius: 5px
         padding: 10px 15px
+        color: #262D33
+        font-family: Lato, sans-serif
         &::placeholder
             font-family: Lato, sans-serif
             font-weight: 400
