--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -26,3 +26,15 @@ body
     max-width: 1140px
     margin: auto
     // border: 1px solid red
+.message-box
+    top: 40px
+    border-radius: 0 0 5px 5px
+    width: 313px
+    color: white
+    background-color: red
+    font-family: Lato, sans-serif
+    font-weight: 400
+    font-size: 16px
+    padding: 3px 10px
+#email-error
+    position: absolute
