--- a/sass/_blocks/_newsletter.sass
+++ b/sass/_blocks/_newsletter.sass
@@ -33,14 +33,17 @@
         line-height: 20px
         color: #FFFFFF
         border: none
+        &:hover
+            background-color: #95c0fc
     &__input
         flex-basis: 100%
         background: #FFFFFF
         border: 1px solid #D9DADB
         border-radius: 5px
         padding: 10px 15px
+        font-weight: 400
         color: #262D33
-        font-family: Lato, sans-serif
+        font-family: Lato-Cyrillic, sans-serif
         &::placeholder
             font-family: Lato, sans-serif
             font-weight: 400
