--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -165,6 +165,35 @@
             min-width: 260px
     .navbar
         width: 115px
+
+@media (max-width: 992px)
+    .header
+        &__navbar
+            &-link:hover
+                color: #ffffff
+    .text
+        &-block
+            &__third:hover
+                background-color: #4592FF
+    .right
+        &-block
+            &__post:hover
+                background-color: #ffffff 
+    .forth
+        &__second
+            &-block:hover &-text
+                color: #262D33
+            &-block:hover
+                background-color: #ffffff
+    .money
+        &__button:hover
+            background-color: #4592FF
+    .slide__button:hover, .sec__button:hover, .newsletter__button:hover
+            background-color: #4592FF
+    .navbar__name:hover
+        color: #4B5157
+    .footer__item:hover
+        color: #262D33
 @media (max-width: 950px)
     .container
         width: 880px
