--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -22,10 +22,13 @@ body
     font-family: 'Lato-Cyrillic'
     src: url('../fonts/Lato/Lato-Thin.ttf')
     font-weight: 100
+
 .container
     max-width: 1140px
     margin: auto
     // border: 1px solid red
+.body-overflow-hidden
+    overflow: hidden
 .message-box
     top: 40px
     border-radius: 0 0 5px 5px
