--- a/sass/_blocks/_money.sass
+++ b/sass/_blocks/_money.sass
@@ -21,6 +21,8 @@
         display: flex
         align-items: center
         margin-bottom: 55px
+        &:hover
+            background-color: #95c0fc
     &__img
         margin-left: 8px
         margin-right: 2px
