--- a/sass/_blocks/_footer.sass
+++ b/sass/_blocks/_footer.sass
@@ -3,40 +3,31 @@
     &__container
         background-color: #fff
     &__devider
-        height: 5px
-        width: 100%
-        display: flex
         &-another
             width: 100%
             height: 1px
             background-color: #D9DADB
         &-first
-            background-color: #FF4F52
-            height: 5px
+            border-top: 5px solid #FF4F52
             width: 17.1053%
         &-second
-            background-color: #AC8EE3
-            height: 5px
+            border-top: 5px solid #AC8EE3
             width: 17.1053%
         &-third
-            background-color: #4592FF
-            height: 5px
+            border-top: 5px solid #4592FF
             width: 17.1053%
         &-forth
-            background-color: #FFA34D
-            height: 5px
+            border-top: 5px solid #FFA34D
             width: 17.1053%
         &-fifth
-            background-color: #3DC47E
-            height: 5px
+            border-top: 5px solid #3DC47E
             width: 17.1053%
         &-six
-            background-color: #6E99AE
-            height: 5px
+            border-top: 5px solid #6E99AE
             width: 14.4736%
     &__navbar
         &-block
-            margin-top: 30px
+            margin-top: 0px
             margin-bottom: 64px
             background-color: #fff
             display: flex
@@ -93,9 +84,10 @@
     &__logo
         display: block
 .navbar
+    padding-top: 30px
     display: flex
     flex-direction: column
-    width: 165px
+    // width: 165px
     &__title
         font-family: Lato-Cyrillic, sans-serif
         font-weight: 900
@@ -103,6 +95,7 @@
         line-height: 20px
         color: #262D33
         margin-bottom: 25px
+        display: block
     &__name
         text-decoration: none
         font-family: Lato-Cyrillic, sans-serif
