--- a/sass/_blocks/_hero.sass
+++ b/sass/_blocks/_hero.sass
@@ -32,6 +32,8 @@
         width: 5px
         background-color: grey
         border-radius: 0 10px 10px 0
+    &-overflow-hidden
+        overflow: hidden
     &__link
         text-decoration: none
         cursor: pointer
