--- a/sass/_blocks/_another.sass
+++ b/sass/_blocks/_another.sass
@@ -196,6 +196,7 @@
         line-height: 30px
         color: #262D33
         width: 43.78%
+        display: block
     &__descr
         margin-top: 15px
         font-family: Lato-Cyrillic, sans-serif
